--- a/Book/resources/stylesheets/templates/mytitlepages.xml
+++ b/Book/resources/stylesheets/templates/mytitlepages.xml
@@ -11,8 +11,8 @@
 <!ENTITY hsize3space "12.96pt"> <!-- 0.75 * hsize3 -->
 <!ENTITY hsize4space "15.552pt"> <!-- 0.75 * hsize4 -->
 <!ENTITY hsize5space "18.6624pt"> <!-- 0.75 * hsize5 -->
-<!ENTITY hsize6space "40pt">
-<!ENTITY hsize7space "180pt">
+<!ENTITY hsize6space "30pt">
+<!ENTITY hsize7space "150pt">
 ]>
 <t:templates xmlns:t="http://nwalsh.com/docbook/xsl/template/1.0"
              xmlns:param="http://nwalsh.com/docbook/xsl/template/1.0/param"
@@ -531,8 +531,9 @@
                font-family="{$title.fontset}">
     <t:titlepage-content t:side="recto" margin-left="{$title.margin.left}">
       <title t:named-template="component.title"
+             space-before.conditionality="retain"
 	     param:node="ancestor-or-self::chapter[1]"
-             space-before="&hsize5space;"
+             space-before="&hsize7space;"
              space-after="&hsize6space;"
 	     font-size="&hsize5;"
 	     font-weight="bold"/>
